dark mode + market access

--- a/public/css/pagination.css
+++ b/public/css/pagination.css
@@ -8,12 +8,35 @@
     font-size: small;
   }
 }
+:root .page-link, [data-bs-theme=light] .page-link {
+  background-color: var(--bs-gray-200);
+}
+:root .page-link:hover, [data-bs-theme=light] .page-link:hover {
+  background-color: var(--bs-gray-300);
+}
+:root .page-link:focus, [data-bs-theme=light] .page-link:focus {
+  background-color: var(--bs-gray-300);
+}
+
+[data-bs-theme=dark] .page-link {
+  background-color: #6c757d;
+}
+[data-bs-theme=dark] .page-link:hover {
+  background-color: #5c636a;
+}
+[data-bs-theme=dark] .page-link:focus {
+  background-color: #5c636a;
+}
+[data-bs-theme=dark] .disabled > .page-link {
+  color: var(--bs-secondary-color);
+}
+
 nav {
   width: 100%;
 }
 
 .page-link {
-  color: #f18841;
+  color: var(--bs-body-color);
 }
 .page-link:hover {
   color: #b96731;
