--- a/templates/software/_filter.html.twig
+++ b/templates/software/_filter.html.twig
@@ -1,6 +1,6 @@
 {{ form_start(searchform, {attr: { id: 'filter', class: 'sticky-scroll'}}) }}
     <div class="input-group flex-nowrap">
-    <span class="input-group-text mb-3" id="addon-wrapping" style='border-right-style: none; border-top-right-radius: 0; border-bottom-right-radius: 0;'>
+    <span class="input-group-text mb-3 icon" id="addon-wrapping" style='border-right-style: none; border-top-right-radius: 0; border-bottom-right-radius: 0;'>
     <i class="fa-solid fa-magnifying-glass"></i>
     </span>
     {{ form_row(searchform.value, {attr: { style: 'border-left-style: none; border-top-left-radius: 0; border-bottom-left-radius: 0;'}}) }}
