--- a/templates/client/register.html.twig
+++ b/templates/client/register.html.twig
@@ -72,14 +72,14 @@
                 </div>
                 {{ form_row(registrationForm.agreeTerms) }}
 
-                <button type="submit" class="btn txt-white bg-orange btn-outline-orange w-100 h-auto">Register</button>
+                <button type="submit" class="btn txt-white bg-orange btn-outline-orange w-100 h-auto btn-login">Register</button>
 
                 <div class="divider d-flex align-items-center my-3">
                     <p class="text-center fw-bold mx-3 mb-0">Or</p>
                 </div>
                 <div class="d-flex justify-content-around align-items-center w-100 p-0 flex-wrap">
                     <p class="mb-1 text-nowrap">Already registered ?</p>
-                    <a class="btn btn-secondary txt-white mb-1" href="{{ path('app_client_login') }}">Sign In</a>
+                    <a class="btn btn-secondary txt-white mb- btn-login" href="{{ path('app_client_login') }}">Login</a>
                 </div>
             {{ form_end(registrationForm) }}
         </div>
