--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -12,7 +12,7 @@
                 </div>
                 <!-- ===== DEVICE TABLE ===== -->
                 <div class="col-md-10 h-100 d-flex flex-column justify-content-between align-items-center">
-                    <h1 class="text-center mb-4">{{ 'Device'|trans }}</h1>
+                    <h1 class="text-center my-4">{{ 'Device'|trans }}</h1>
                     {% for message in app.flashes('error') %}
                         <div class="p-3 my-2 rounded-2 alert alert-danger">{{ message }}</div>
                     {% endfor %}
@@ -25,17 +25,18 @@
                        
                     <div id="listDevice" class="w-100" style="margin-bottom: 1em;">
                         <div id="listDeviceTable" class="table-responsive w-100 h-100">
-                            <table class="table table-bordered table-hover w-100" id="deviceTable" data-toggle="table" data-pagination="true" data-sort-name="sn" data-search="true" style="height: 100px;">
+                            <table class="table table-bordered table-striped table-hover w-100" id="deviceTable" data-toggle="table" data-pagination="true" data-sort-name="sn" data-search="true">
                                 
                                 <thead class="w-100 align-middle">
                                     <tr class="h-100 w-100 align-middle" id="deviceTableTitle">
+                                        {% if is_granted("ROLE_SAV") %}
                                         <th scope="col"></th>
+                                        {% endif %}
                                         <th scope="col" class="h-100 p-0 text-nowrap">
                                             <div class="h-100 d-flex justify-content-center input-group flex-nowrap text-center align-items-center ps-2">
                                                 <span class="me-1">{{ 'Serial Number'|trans }}</span>
-                                                <i class="h-100 fa-solid fa-arrow-up-a-z d-flex align-items-center" id="snSort" onclick=sortTable(1)></i>
+                                                <i class="h-100 fa-solid fa-arrow-up-a-z d-flex align-items-center icon-interactive" id="snSort" onclick=sortTable(1)></i>
                                             </div>
-                                        
                                         </th>
                                         <th scope="col" class="text-center text-nowrap">{{ 'Device Type'|trans }}</th>
                                         <th scope="col" class="text-center text-nowrap">{{ 'Version'|trans }}</th>
@@ -51,9 +52,8 @@
                                         {% endif %}
                                     </tr>
                                     <tr class="w-100 align-bottom">
-                                        <th class="text-center">
                                         {% if is_granted("ROLE_SAV") %}
-                                                                        
+                                        <th class="text-center">
                                             {{ form_start(checkform) }}
                                                 <div class="row">
                                                     <div class="col form-field form-inline text-center">
@@ -61,10 +61,8 @@
                                                     </div>
                                                 </div>
                                             {{ form_end(checkform) }}
-                                            
-                                        {% endif %}
-
                                         </th>
+                                        {% endif %}
                                         <th colspan="3"></th>
                                         <th id='test_zone_0'>
                                             {% if is_granted("ROLE_SAV")%}
@@ -80,21 +78,21 @@
                                     </tr>
                                 </thead>
                                 
-                                <tbody class="w-100 overflow-scroll" style="height: 15em">
+                                <tbody class="w-100 overflow-scroll">
 
                                     {% for device in devices %}
                                         <tr scope="row" class="w-100">
+                                            {% if is_granted("ROLE_SAV")%}
                                             <td class="text-center">
                                                 <div class="form-field text-center align-middle">
-                                                {% if is_granted("ROLE_SAV")%}
                                                     <input type="checkbox" 
                                                     id="checkbox_{{device.id}}" 
                                                     data-id="{{device.id}}" 
                                                     name="checkbox_item" 
                                                     class="form-check-input device-check" {{ (device.selected)? 'checked': ''}}/>
-                                                {% endif %}
                                                 </div>
                                             </td>
+                                            {% endif %}
                                             <td class="text-center text-nowrap">{{device.sn}}</td>
                                             <td class="text-center">
                                             {% if device.deviceFamily.numberId == 10 %}
@@ -110,7 +108,7 @@
                                             {#TODO Progress bar#}
                                             
                                             <td class="text-center">
-                                                <div class="progress rounded-2 progress-small">
+                                                <div class="progress rounded-2 progress-small form-control">
                                                     <div class="progress-bar viride dark-1" style="width: {{device.download}}%">{{ device.download > 0 ? device.download : '' }}
                                                     </div>
                                                 </div>
@@ -119,7 +117,7 @@
                                             <td class="text-center">
                                             {% if download_link == true %}
                                                 <a download href="{{ asset(ressource_path  ~ 'logs/' ~ device.deviceFamily ~ '/' ~ device.logFile) }}">
-                                                <i class="fa-solid fa-download"></i>
+                                                <i class="fa-solid fa-download icon-interactive"></i>
                                                 </a>
                                             {% else %}
                                                 <a href="" data-toggle="tooltip" data-placement="bottom" title="No log !">
@@ -145,10 +143,10 @@
                                             {% if is_granted("ROLE_GOE") %}
                                             <td class="text-center">
                                             <div class="input-group d-flex flex-nowrap text-break overflow-auto justify-content-center">
-                                                <textarea class="comment_input border border-0" style="background-color:#ffffff; height: 100%;" type="text" name="nm" data-id="{{device.id}}">
+                                                <textarea class="comment_input form-control" style="height: 100%; box-shadow: 0px 0px 0px 0px rgba(0,0,0,0)" type="text" name="nm" data-id="{{device.id}}">
                                                 {{device.comment}}
                                                 </textarea> 
-                                                <button class="comment_button btn btn-dark border-0 btn-left" type="button" name="name" value="" data-id="{{device.id}}"><i class="fa-solid fa-check"></i></button>
+                                                <button class="comment_button btn btn-outline-orange border-0 btn-left" type="button" name="name" value="" data-id="{{device.id}}"><i class="fa-solid fa-check"></i></button>
                                             </div>
                                             </td>
                                             {% endif %}
