--- a/templates/device/_filter.html.twig
+++ b/templates/device/_filter.html.twig
@@ -2,7 +2,7 @@
 {#{{ form_start(form, {attr: { id: 'filter',  style: "position: fixed; width: 100;"}}) }}#}
 {{ form_start(form, {attr: { id: 'filter', style: "", class: "d-flex flex-column justify-content-center"}}) }}
     <div class="input-group flex-nowrap">
-    <span class="input-group-text mb-3" id="addon-wrapping" style='border-right-style: none; border-top-right-radius: 0; border-bottom-right-radius: 0;'>
+    <span class="input-group-text mb-3 icon" id="addon-wrapping" style='border-right-style: none; border-top-right-radius: 0; border-bottom-right-radius: 0;'>
     <i class="fa-solid fa-magnifying-glass"></i>
     </span>
     {{ form_row(form.q, {attr: { style: 'border-left-style: none; border-top-left-radius: 0; border-bottom-left-radius: 0;'}}) }}
@@ -29,5 +29,5 @@
             {{ form_row(form.forced) }}
         </div>
 
-    <button type="submit" class="btn bg-orange btn-outline-orange">{{ 'Search'|trans }}</button>
+    <button type="submit" class="btn btn-outline-orange">{{ 'Search'|trans }}</button>
 {{ form_end(form) }}
