--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -1,40 +1,41 @@
-<nav class="container-fluid navbar navbar-expand-lg shadow bg-orange sticky-top">
+<nav class="container-fluid navbar navbar-header navbar-expand-lg shadow bg-orange sticky-top py-0">
         <div class="w-100 d-flex flex-nowrap align-items-center">
             <a href="{{path('home')}}">
-            <img class="navbar-brand" id="navbar-logo" src="{{asset('img/winback_logo.svg')}}" alt="winback_logo" width="140" height="auto">
+            {#<img class="navbar-brand" id="navbar-logo" src="{{asset('img/winback_logo.svg')}}" alt="winback_logo" width="140" height="auto">#}
+            <img class="navbar-brand" id="navbar-logo" src="{{asset('img/logo_winback_assist.svg')}}" alt="winback_logo" width="140" height="auto">
             </a>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
-                <ul class="navbar-nav d-flex align-items-center me-auto">
+            <div class="collapse navbar-collapse justify-content-between align-items-center" id="navbarSupportedContent">
+                <ul class="navbar-nav d-flex align-items-center me-auto py-0 h-100">
                 {% if is_granted('ROLE_READER') %}
-                    <li><a class="nav-link" href="{{path('software')}}">{{ 'Softwares'|trans }}</a></li>
-                    <li><a class="nav-link" href="{{path('device')}}">{{ 'Devices'|trans }}</a></li>
+                    <li class="nav-item h-100"><a class="nav-link py-lg-5 p-2" href="{{path('software')}}"><span>{{ 'Softwares'|trans }}</span></a></li>
+                    <li class="nav-item h-100"><a class="nav-link py-lg-5 p-2" href="{{path('device')}}"><span>{{ 'Devices'|trans }}</span></a></li>
                     {% if is_granted("ROLE_ADMIN") %}
-                    <li><a class="nav-link" href="{{path('dashboard')}}">{{ 'Dashboard'|trans }}</a></li>
+                    <li class="nav-item h-100"><a class="nav-link py-lg-5 p-2" href="{{path('dashboard')}}"><span>{{ 'Dashboard'|trans }}</span></a></li>
                     {% endif %}
                     {% if is_granted('ROLE_ADMIN') %}
-                    <li><a class="nav-link" href="{{path('app_sn')}}">{{ 'SN'|trans }}</a></li>
+                    <li class="nav-item h-100"><a class="nav-link py-lg-5 p-2" href="{{path('app_sn')}}"><span>{{ 'SN'|trans }}</span></a></li>
                     {% endif %}
                     {% if is_granted('ROLE_SUPER_ADMIN') %}
-                    <li><a class="nav-link" href="{{path('app_error')}}">{{ 'Errors'|trans }}</a></li>
+                    <li class="nav-item h-100"><a class="nav-link py-lg-5 p-2" href="{{path('app_error')}}"><span>{{ 'Errors'|trans }}</span></a></li>
                     {% endif %}
                     {% if is_granted('ROLE_ADMIN') %}
-                    <li class="nav-link dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Statistics
+                    <li class="nav-item dropdown h-100">
+                        <a class="nav-link py-lg-5 p-2 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <span>{{ 'Statistics'|trans }}</span>
                         </a>
                         <ul class="dropdown-menu">
                             {% if is_granted('ROLE_SUPER_ADMIN') %}
-                            <li><a class="dropdown-item" href="{{path('app_log')}}">Logs</a></li>
+                            <li><a class="dropdown-item" href="{{path('app_log')}}"><span>{{ 'Logs'|trans }}</span></a></li>
                             {% endif %}
-                            <li><a class="dropdown-item" href="{{path('statistics')}}">{{ 'Treatments'|trans}}</a></li>
+                            <li><a class="dropdown-item" href="{{path('statistics')}}"><span>{{ 'Treatments'|trans}}</span></a></li>
                         </ul>
                     </li>
                     {% endif %}
                 {% endif %}
-                    <li class="nav-item dropdown" style="width: fit-content;">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown-language" role="button"
+                    <li class="nav-item dropdown h-100" style="width: fit-content;">
+                        <a class="nav-link py-lg-5 p-2 dropdown-toggle" href="#" id="dropdown-language" role="button"
                         data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        {{ app.request.locale|locale_name(app.request.locale) }}
+                        <span>{{ app.request.locale|locale_name(app.request.locale) }}</span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-language">
                         <li><a class="dropdown-item" href="{{ path('device', {_locale: 'en'}) }}"><img class="icon-flags" src="{{asset('img/flags/uk.png')}}" alt=""> EN</a></li>
@@ -45,27 +46,108 @@
                 
                 </ul>
                 
-                
-                <div class="d-flex flex-nowrap justify-content-between align-items-center">
-                {% if is_granted('ROLE_USER') %}
-                    <div>
-                        {{"Welcome"|trans}} {{ app.user }}
+                <div class="d-flex justify-content-center">
+                    <div class="d-flex flex-nowrap justify-content-between align-items-center" style="max-width: 10em;">
+                    {% if is_granted('ROLE_USER') %}
+                        <div class="fw-bold">
+                            {{ app.user }}
+                        </div>
+                        <a class="nav-link py-lg-5 p-2" href="{{path('app_logout')}}" style="margin-left: 0.5em;">
+                            <i class="fa fa-sign-out text-white" aria-hidden="true"></i>
+                        </a>
+                    {% endif %}
+                    {% include 'includes/_switch_mode.html.twig' %}
                     </div>
-                    <a class="nav-link" href="{{path('app_logout')}}" style="margin-left: 0.5em;">
+                </div>
+                
+            </div>
+        </div>
+        <button class="navbar-toggler align-self-start border border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span><i class="fa-solid fa-bars text-white"></i></span>
+        </button>
+    </nav>
+
+<!-- Navbar Phone -->
+    <nav class="container-fluid navbar navbar-phone shadow bg-orange sticky-top py-0">
+        <div class="w-100 d-flex flex-nowrap align-items-center justify-content-between">
+            <a href="{{path('home')}}">
+            <img class="navbar-brand ms-2" id="navbar-logo" src="{{asset('img/logo_winback_assist.svg')}}" alt="winback_logo" width="140" height="auto">
+            </a>
+            <div>
+                <button class="navbar-toggler align-self-start border border-0" type="button" data-bs-toggle="modal" data-bs-target="#navbarPhonePage">
+                <span><i class="fa-solid fa-ellipsis-vertical text-white"></i></span>
+                </button>
+                <button class="navbar-toggler align-self-start border border-0" type="button" data-bs-toggle="modal" data-bs-target="#navbarPhoneParam">
+                <span><i class="fa-solid fa-user text-white"></i></span>
+                </button>
+            </div>
+        </div>
+    </nav>
+
+    <div class="modal" id="navbarPhonePage" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content bg-orange" style="width: fit-content;">
+                <ul class="navbar-nav d-flex align-items-center me-auto py-0 h-100">
+                {% if is_granted('ROLE_READER') %}
+                    <li class="nav-item h-100"><a class="nav-link py-lg-5 p-2" href="{{path('software')}}"><span>{{ 'Softwares'|trans }}</span></a></li>
+                    <li class="nav-item h-100"><a class="nav-link py-lg-5 p-2" href="{{path('device')}}"><span>{{ 'Devices'|trans }}</span></a></li>
+                    {% if is_granted("ROLE_ADMIN") %}
+                    <li class="nav-item h-100"><a class="nav-link py-lg-5 p-2" href="{{path('dashboard')}}"><span>{{ 'Dashboard'|trans }}</span></a></li>
+                    {% endif %}
+                    {% if is_granted('ROLE_ADMIN') %}
+                    <li class="nav-item h-100"><a class="nav-link py-lg-5 p-2" href="{{path('app_sn')}}"><span>{{ 'SN'|trans }}</span></a></li>
+                    {% endif %}
+                    {% if is_granted('ROLE_SUPER_ADMIN') %}
+                    <li class="nav-item h-100"><a class="nav-link py-lg-5 p-2" href="{{path('app_error')}}"><span>{{ 'Errors'|trans }}</span></a></li>
+                    {% endif %}
+                    {% if is_granted('ROLE_ADMIN') %}
+                    <li class="nav-item dropdown h-100">
+                        <a class="nav-link py-lg-5 p-2 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <span>{{ 'Statistics'|trans }}</span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            {% if is_granted('ROLE_SUPER_ADMIN') %}
+                            <li><a class="dropdown-item" href="{{path('app_log')}}"><span>{{ 'Logs'|trans }}</span></a></li>
+                            {% endif %}
+                            <li><a class="dropdown-item" href="{{path('statistics')}}"><span>{{ 'Treatments'|trans}}</span></a></li>
+                        </ul>
+                    </li>
+                    {% endif %}
+                {% endif %}
+                    <li class="nav-item dropdown h-100" style="width: fit-content;">
+                        <a class="nav-link py-lg-5 p-2 dropdown-toggle" href="#" id="dropdown-language" role="button"
+                        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span>{{ app.request.locale|locale_name(app.request.locale) }}</span>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-language">
+                        <li><a class="dropdown-item" href="{{ path('device', {_locale: 'en'}) }}"><img class="icon-flags" src="{{asset('img/flags/uk.png')}}" alt=""> EN</a></li>
+                        <li><a class="dropdown-item" href="{{ path('device', {_locale: 'fr'}) }}"><img class="icon-flags" src="{{asset('img/flags/france.png')}}" alt=""> FR</a></li>
+                        <li><a class="dropdown-item" href="{{ path('device', {_locale: 'ko'}) }}"><img class="icon-flags" src="{{asset('img/flags/korea.png')}}" alt=""> KO</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="modal fade" id="navbarPhoneParam" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content bg-orange" style="width: fit-content;">
+                <div class="d-flex flex-column justify-content-between align-items-center">
+                {% if is_granted('ROLE_USER') %}
+                    <div class="fw-bold p-2">
+                        {{ app.user }}
+                    </div>
+                    <a class="nav-link py-lg-5 p-2" href="{{path('app_logout')}}" style="margin-left: 0.5em;">
                         <i class="fa fa-sign-out text-white" aria-hidden="true"></i>
                     </a>
                 {% endif %}
                 {% include 'includes/_switch_mode.html.twig' %}
                 </div>
-                
             </div>
         </div>
-
-        <button class="navbar-toggler align-self-start border border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span><i class="fa-solid fa-bars text-white"></i></span>
-        </button>
-
-    </nav>
+    </div>
 
 <!-- ##### Sidenav ##### -->
 <!--
