--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -17,43 +17,47 @@
     </div>
     {% endif %}
     #}
-    <div class="container py-5 bg-light rounded-3 d-flex flex-column align-items-center w-100">
+    <div class="container py-5 rounded-3 d-flex flex-column align-items-center w-100">
         <div class="d-flex align-items-center">
             <div><img src="{{asset('img/avatar.png')}}" alt="avatar" style="width: 5em; height: auto; border-radius: 50%; margin-right: 2em;" class="btn-shadow"></div>
-            <div style="color: #4f4f4f;">
+            <div>
                 <h2><span>{{ 'Welcome,'|trans }}</span> <span style="font-weight: 400">{{app.user.username}}</span></h2>
-                <div class="lead">{{ 'On your personal dashboard'|trans }}</div>
+                <div class="lead">{{ 'On your dashboard'|trans }}</div>
             </div>
         </div>
-        <hr style="width: 50%">
+        <hr class="w-100 mt-5">
         {% if is_granted("ROLE_READER") %}
-            <div class="row d-flex align-items-stretch justify-content-between w-50">
+        <span class="d-flex text-nowrap justify-content-left align-items-center w-100"><svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg><h2 class="text-uppercase ms-1 mb-0" style="font-size: 21px;">Shortcuts</h2></span>
+            <div class="row d-flex align-items-stretch justify-content-evenly w-100 h-100 mt-5">
                 
-                <div class="col col-lg-4 card shadow-1 hoverable-1 rounded-3 white card-index" style="min-width: 15em;">
-                    <a href="{{path('software')}}">
-                    <div class="card-body">
-                    <h6 class="text-nowrap">{{ 'Softwares'|trans }}</h6>
-                    {{ 'Manage the versions available in the database, add or delete a new software.'|trans }}
+                <div class="col card card-index m-2" style="min-width: 15em;">
+                    <a class="h-100" href="{{path('software')}}">
+                    <div class="card-body h-100 d-flex flex-column align-items-center justify-content-evenly">
+                    <i class="fa-solid fa-download" style="font-size: 3em;"></i>
+                    <h6 class="text-nowrap text-uppercase fw-light">{{ 'Softwares'|trans }}</h6>
+                    <span>{{ 'Manage the versions available in the database, add or delete a new software.'|trans }}</span>
                     </div>
                     </a>
                 </div>
                 
                 
-                <div class="col col-lg-4 card shadow-1 hoverable-1 rounded-3 white card-index" style="min-width: 15em;">
-                    <a href="{{path('device')}}">
-                        <div class="card-body">
-                        <h6 class="text-nowrap">{{ 'Devices'|trans }}</h6>
-                        {{ 'Manage the devices available on the server, edit an existing device.'|trans }}
+                <div class="col card card-index m-2" style="min-width: 15em;">
+                    <a class="h-100" href="{{path('device')}}">
+                        <div class="card-body h-100 d-flex flex-column align-items-center justify-content-evenly">
+                        <i class="fa-solid fa-laptop-medical" style="font-size: 3em;"></i>
+                        <h6 class="text-nowrap text-uppercase fw-light">{{ 'Devices'|trans }}</h6>
+                        <span>{{ 'Manage the devices available on the server, edit an existing device.'|trans }}</span>
                         </div>
                     </a>   
                 </div>
                 
                 {% if is_granted("ROLE_ADMIN") %}
-                <div class="col col-lg-4 card shadow-1 hoverable-1 rounded-3 white card-index" style="min-width: 15em;">
-                <a href="{{path('dashboard')}}">
-                    <div class="card-body">
-                    <h6 class="text-nowrap">{{ 'Dashboard'|trans }}</h6>
-                    {{ 'Visualize the number of devices updated in the database.'|trans }}
+                <div class="col card card-index m-2" style="min-width: 15em;">
+                <a class="h-100" href="{{path('dashboard')}}">
+                    <div class="card-body h-100 d-flex flex-column align-items-center justify-content-evenly">
+                    <span><i class="fa-solid fa-gauge-high" style="font-size: 3em;"/></i></span>
+                    <h6 class="text-nowrap text-uppercase fw-light">{{ 'Dashboard'|trans }}</h6>
+                    <span>{{ 'Visualize the number of devices updated in the database.'|trans }}</span>
                     </div>
                 </a>
                 </div>
@@ -61,19 +65,20 @@
                 
             </div>
             {% if is_granted("ROLE_ADMIN") %}
-            {#
-            <div class="row h-100 mt-5 d-flex align-items-center justify-content-center">
-                <div style="height: 25em; width: 30em;">
-                {{ render_chart(firstChart) }}
-                </div>
-                <div style="height: 25em; width: 30em;">
-                {{ render_chart(secondChart) }}
-                </div>
-                <div style="height: 25em; width: 30em;">
-                {{ render_chart(thirdChart) }}
-                </div>
+        <hr class="w-100 mt-5">
+        <span class="d-flex text-nowrap justify-content-left align-items-center w-100"><svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg><h2 class="text-uppercase ms-1 mb-0" style="font-size: 21px;">Dashboard</h2></span>
+        <div class="row h-100 mt-5 d-flex align-items-center justify-content-center">
+            <div class="col" style="height: 25em; width: 30em;">
+            {#{{ render_chart(firstChart) }}#}
             </div>
-            #}
+            <div class="col" style="height: 25em; width: 30em;">
+            {{ render_chart(secondChart) }}
+            </div>
+            <div class="col" style="height: 25em; width: 30em;">
+            {{ render_chart(thirdChart) }}
+            </div>
+        </div>
+            
             {% endif %}
         {% elseif is_granted("ROLE_CLIENT")%}
 
