--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -15,8 +15,8 @@
                 <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
             {% endfor %}
 
-            {{ form_start(registrationForm, {'attr': {'class': 'text-center d-flex flex-column align-items-center justify-content-around login'}}) }}
-                <div class="w-50" style="margin-top: 1em; padding-bottom: 2em;">
+            {{ form_start(registrationForm, {'attr': {'class': 'text-center d-flex flex-column align-items-center justify-content-around login registration-form'}}) }}
+                <div class="" style="margin-top: 1em; padding-bottom: 2em;">
                     <span class="fa-stack fa-3x" style="position: relative; top: -40px;">
                         <i class="fa-solid fa-circle fa-stack-2x" style="color: #f18841;"></i>
                         <i class="fa-regular fa-user fa-stack-1x fa-inverse" style="text-shadow: 2px 2px 2px rgba(0,0,0,0.5);"></i>
@@ -47,7 +47,7 @@
                             </div>
                             <div id="password-strength-status"></div>
                         </div>
-                        <div class="form-outline">
+                        <div class="form-outline mt-3">
                             <div class="input-group flex-nowrap">
                                 <span class="input-group-text mb-3" id="addon-wrapping"><i class="fa-solid fa-lock"></i></span>
                                 {{ form_row(registrationForm.password.second, {attr: {placeholder: ( 'Confirm Password'|trans ), style: 'border-left-style: none; border-radius: 0;', class:'inputPassword form-control-register'}}) }}
@@ -56,14 +56,14 @@
                         </div>
                     <div class="d-flex justify-content-center flex-nowrap">{{ form_row(registrationForm.agreeTerms, {attr: {label: ( 'Agree terms'|trans ), style: 'margin-bottom: 0;'}}) }}</div>
 
-                    <button type="submit" class="btn btn-justify txt-white bg-orange btn-outline-orange w-100 h-auto">{{ 'Register'|trans }} <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></button>
+                    <button type="submit" class="btn btn-justify txt-white bg-orange btn-orange w-100 h-auto btn-login">{{ 'Register'|trans }} <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></button>
 
                     <div class="divider d-flex align-items-center my-3">
                         {#<p class="text-center fw-bold mx-3 mb-0">{{ 'Or'|trans }}</p>#}
                     </div>
                     <div class="d-flex justify-content-around align-items-center w-100 p-0 flex-wrap">
                         <p class="mb-1 text-nowrap">{{ 'Already registered ?'|trans }}</p>
-                        <a class="btn btn-justify btn-secondary txt-white mb-1 w-100" href="{{ path('app_login') }}">{{ 'Sign In'|trans }} <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></a>
+                        <a class="btn btn-justify btn-secondary txt-white mb-1 w-100 btn-login" href="{{ path('app_login') }}">{{ 'Login'|trans }} <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></a>
                     </div>
                 </div>
 
