--- a/templates/sn.html.twig
+++ b/templates/sn.html.twig
@@ -6,12 +6,13 @@
     <div class="container d-flex flex-column justify-content-between align-items-center vh-80">
             <div class="row w-100 h-100 mt-4">
                 <div class="col-md-3">
-                {% include "sn/_filter.html.twig" %}
+                {% include "sn/_sidenav.html.twig" %}
                 </div>
                 <!-- ===== SN TABLE ===== -->
                 <div class="col-md-9 h-100">
                     <h1 class="text-center mb-4">Serial Numbers</h1>
-                       
+                    <hr class="w-100 mt-5">
+                    <span class="d-flex text-nowrap justify-content-left align-items-center w-100 mb-5"><svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg><h2 class="text-uppercase ms-1 mb-0" style="font-size: 21px;">Table</h2></span>
                     <div id="listSn" class="w-100">
                         <div id="listSnTable" class="table-responsive w-100 h-100">
                             <table class="table table-striped table-bordered table-hover w-100" id="snTable" style="height: 100px;">
@@ -53,6 +54,7 @@
                     
                     {{ knp_pagination_render(sn) }}
                     
+                    {% include "sn/dashboard.html.twig" %}
                 </div>
 
                 <!-- Button to add device table -->
@@ -71,7 +73,6 @@
             <!-- ===== /SN TABLE ===== -->
 
         </div>
-
     </div>
 {% endblock %}
 
